@@ -493,7 +493,7 @@ public class SingleNodePlanner {
       if (plan.getCardinality() == -1) {
         // use 0 for the size to avoid it becoming the leftmost input
         // TODO: Consider raw size of scanned partitions in the absence of stats.
-        candidates.add(new Pair<TableRef, Long>(ref, new Long(0)));
+        candidates.add(new Pair<TableRef, Long>(ref, Long.valueOf(0)));
         if (LOG.isTraceEnabled()) {
           LOG.trace("candidate " + ref.getUniqueAlias() + ": 0");
         }
@@ -502,7 +502,7 @@ public class SingleNodePlanner {
       Preconditions.checkState(ref.isAnalyzed());
       long materializedSize =
           (long) Math.ceil(plan.getAvgRowSize() * (double) plan.getCardinality());
-      candidates.add(new Pair<TableRef, Long>(ref, new Long(materializedSize)));
+      candidates.add(new Pair<TableRef, Long>(ref, Long.valueOf(materializedSize)));
       if (LOG.isTraceEnabled()) {
         LOG.trace(
             "candidate " + ref.getUniqueAlias() + ": " + Long.toString(materializedSize));
@@ -863,7 +863,6 @@ public class SingleNodePlanner {
             // If the collection is within a (possibly nested) struct, add the tuple in
             // which the top level struct is located.
             SlotDescriptor desc = collectionExpr.getDesc();
-            List<TupleDescriptor> enclosingTupleDescs = desc.getEnclosingTupleDescs();
             TupleDescriptor topTuple = desc.getTopEnclosingTupleDesc();
             requiredTids.add(topTuple.getId());
           } else {
@@ -1360,7 +1359,7 @@ public class SingleNodePlanner {
     // if the view already has a limit, we leave it as-is otherwise we
     // apply the outer limit
     if (viewStatus != null && !viewStatus.first) {
-      inlineViewRef.getAnalyzer().setSimpleLimitStatus(new Pair<>(new Boolean(true),
+      inlineViewRef.getAnalyzer().setSimpleLimitStatus(new Pair<>(Boolean.valueOf(true),
           outerStatus.second));
     }
   }
@@ -1900,6 +1899,14 @@ public class SingleNodePlanner {
     }
   }
 
+  private PlanNode createIcebergMetadataScanNode(TableRef tblRef, Analyzer analyzer)
+      throws ImpalaException {
+    IcebergMetadataScanNode icebergMetadataScanNode =
+        new IcebergMetadataScanNode(ctx_.getNextNodeId(), tblRef.getDesc());
+    icebergMetadataScanNode.init(analyzer);
+    return icebergMetadataScanNode;
+  }
+
   /**
    * Returns all applicable conjuncts for join between two plan trees 'materializing' the
    * given left-hand and right-hand side table ref ids. The conjuncts either come from
@@ -2213,9 +2220,7 @@ public class SingleNodePlanner {
       result = new SingularRowSrcNode(ctx_.getNextNodeId(), ctx_.getSubplan());
       result.init(analyzer);
     } else if (tblRef instanceof IcebergMetadataTableRef) {
-      throw new NotImplementedException(String.format("'%s' refers to a metadata table "
-          + "which is currently not supported.", String.join(".",
-          tblRef.getPath())));
+      result = createIcebergMetadataScanNode(tblRef, analyzer);
     } else {
       throw new NotImplementedException(
           "Planning not implemented for table ref class: " + tblRef.getClass());
